hphp/hack/test/typecheck/inout/bad_inout_hint_typeconst3.php.exp
File "bad_inout_hint_typeconst3.php", line 7, characters 7-8:
Class C2 does not correctly implement all required methods  (Typing[4110])
File "bad_inout_hint_typeconst3.php", line 7, characters 18-19:
Some methods are incompatible with those declared in type C1
Read the following to see why:
File "bad_inout_hint_typeconst3.php", line 4, characters 23-23:
Unable to satisfy constraint on this type constant
File "bad_inout_hint_typeconst3.php", line 4, characters 44-46:
This is an int
File "bad_inout_hint_typeconst3.php", line 8, characters 34-36:
It is incompatible with a num (int/float)
